--- a/_layouts/package.json
+++ b/_layouts/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "foam",
+    "name": "smithed-knowledge-base",
     "private": true,
     "description": "",
     "version": "1.0.0",
